# panharmonicon

./: Cargo.toml  LICENSE.html  LICENSE.txt  README.md  about.hbs  about.toml  build.rs  theme.toml
.github/workflows/: release.yml  rust-release  rust.yml  update_licenses.yml
assets/: LICENSE.txt  panharmonicon.rc  theme.toml
src/: app.rs  caching.rs  config.rs  crossterm.rs  errors.rs  logger.rs  login.rs  main.rs  messages.rs  model.rs  pandora.rs  panharmonicon.rs  player.rs  simpleterm.rs  term.rs  terminal.rs  track.rs
src/mpris_ui/: mod.rs  mpris_intf.rs
src/pandora/: api.rs  mod.rs
src/panharmonicon/: mod.rs
src/term/: crossterm.rs  crossterm_input.rs  mod.rs
src/term_ui/: callbacks.rs  dialogs.rs  mod.rs
src/ui/: cursive.rs  dumbterm.rs  mod.rs
