[package]
name = "panharmonicon"
description = "A command line music player, unofficial client for Pandora"
version = "0.6.5"
authors = ["Will Page <compenguy@gmail.com>"]
edition = "2018"
license = "Apache-2.0 AND MIT AND BSD-2-Clause AND BSD-3-Clause AND CC0-1.0 AND MPL-2.0 AND Zlib"
repository = "https://github.com/compenguy/panharmonicon"

[features]
default = ["emoji_labels"]
emoji_labels = []

[dependencies]
human-panic = "1"
anyhow = "1"
thiserror = "1"
clap = { version = "3", default-features = false, features = ["std", "cargo"] }
log = { version = "0.4", default-features = true, features = ["std"] }
flexi_logger = { version = "0.25", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["std"] }
dirs = "4"
serde = "1"
serde_derive = "1"
serde_json = "1"
keyring = "1"
pandora-api = "0.6"
tokio = { version = "1", default-features = false, features = ["fs", "io-util", "time", "rt", "macros"] }
reqwest = { version = "0.11", features = ["stream"] }
async-broadcast = "0.5"
rodio = { version = "0.16", default-features = false }
redlux = "0.6"
mp4ameta = "0.11"
cursive = { version = "0.20", default-features = false, features = ["crossterm-backend", "toml"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
chrono = "0.4"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
