[package]
name = "panharmonicon"
description = "A command line music player, unofficial client for Pandora"
version = "0.7.1"
authors = ["Will Page <compenguy@gmail.com>"]
edition = "2018"
license = "Apache-2.0 AND MIT AND BSD-2-Clause AND BSD-3-Clause AND CC0-1.0 AND MPL-2.0 AND Zlib"
repository = "https://github.com/compenguy/panharmonicon"

[features]
default = ["emoji_labels"]
emoji_labels = []

[dependencies]
anyhow = "1"
thiserror = "1"
human-panic = "2"
clap = { version = "4", default-features = false, features = ["std", "cargo", "help"] }
log = { version = "0.4", default-features = true, features = ["std"] }
flexi_logger = { version = "0.28", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["std"] }
dirs = "5"
serde = "1"
either = "1"
serde_derive = "1"
serde_json = "1"
keyring = "2"
pandora-api = "0.6"
futures = "0.3"
tokio = { version = "1", default-features = false, features = ["fs", "io-util", "macros", "rt", "time"] }
reqwest = { version = "0.12", features = ["stream"] }
async-broadcast = "0.7"
rodio = { version = "0.17", default-features = false }
redlux = { version = "0.7", git = "https://github.com/compenguy/redlux.git" }
mp4ameta = "0.11"
cursive = { version = "0.20", default-features = false, features = ["crossterm-backend", "toml"] }
rand = "0.8"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
chrono = "0.4"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "debuginfo"
