[package]
name = "panharmonicon"
description = "A command line music player, unofficial client for Pandora"
version = "0.7.3"
authors = ["Will Page <compenguy@gmail.com>"]
edition = "2018"
license = "Apache-2.0 AND MIT AND BSD-2-Clause AND BSD-3-Clause AND CC0-1.0 AND MPL-2.0 AND Zlib"
repository = "https://github.com/compenguy/panharmonicon"

[features]
default = ["emoji_labels"]
mpris_server = ["dep:mpris-server"]
emoji_labels = []

[dependencies]
anyhow = "1"
thiserror = "2"
human-panic = "2"
clap = { version = "4", default-features = false, features = ["std", "cargo", "help"] }
log = { version = "0.4", default-features = true, features = ["std"] }
flexi_logger = { version = "0.31", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["std"] }
dirs = "6"
serde = "1"
either = "1"
serde_derive = "1"
serde_json = "1"
keyring = "2"
pandora-api = "0.6"
futures = "0.3"
tokio = { version = "1", default-features = false, features = ["fs", "io-util", "macros", "rt", "time"] }
reqwest = { version = "0.13", features = ["stream"] }
async-broadcast = "0.7"
redlux = { version = "0.7", git = "https://github.com/compenguy/redlux.git" }
mp4ameta = "0.13"
cursive = { version = "0.21", default-features = false, features = ["crossterm-backend", "toml"] }
mpris-server = { version = "0.8", optional = true }
rand = "0.8"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
chrono = "0.4"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "debuginfo"
